[package]
name = "neat-date-time"
version = "0.1.2"
edition = "2021"
description   = "(native) Types & operations to allow space efficient storage of dates and times"
keywords      = ["packed", "compact", "dense", "date", "time"]
categories    = ["encoding", "compression"]
readme        = "README.md"
authors       = ["Luiz Silveira <zertyz@gmail.com>"]
homepage      = "https://github.com/zertyz/neat-date-time"
repository    = "https://github.com/zertyz/neat-date-time"
documentation = "https://docs.rs/neat-date-time/"
license       = "Unlicense"


[workspace]

[dependencies]

#chrono = "0.4"