[package]
name = "neat-date-time"
version = "0.1.9"
edition = "2021"
description   = "(native) Types & operations to allow space efficient storage of dates and times"
keywords      = ["packed", "compact", "dense", "date", "time"]
categories    = ["encoding", "compression", "date-and-time"]
readme        = "README.md"
authors       = ["Luiz Silveira <zertyz@gmail.com>"]
homepage      = "https://github.com/zertyz/neat-date-time"
repository    = "https://github.com/zertyz/neat-date-time"
documentation = "https://docs.rs/neat-date-time/"
license       = "Unlicense"


[workspace]

[dependencies]

#lazy_static = "1.4"

[build.dependencies]

#chrono = "0.4"     # Date and time library for Rust

# eventually chrono will be moved to [dependencies], if we are ever to support NaiveDate conversions
