[package]
name = "neat-date-time"
version = "0.2.0"
edition = "2021"
description   = "(native) Types & operations to allow space efficient storage of dates and times"
keywords      = ["packed", "compact", "dense", "date", "time"]
categories    = ["encoding", "compression", "date-and-time"]
readme        = "README.md"
authors       = ["Luiz Silveira <zertyz@gmail.com>"]
homepage      = "https://github.com/zertyz/neat-date-time"
repository    = "https://github.com/zertyz/neat-date-time"
documentation = "https://docs.rs/neat-date-time/"
license       = "Unlicense"


[workspace]

[dependencies]

[build.dependencies]

[package.metadata.docs.rs]

rustdoc-args = ["--document-private-items"]     # attempt to enable full documentation (including test modules and test cases)
